# xng

./: .gitignore  CMakeLists.txt  LICENSE
cugraphics/: CMakeLists.txt  export.hpp  signed_distance_field.cu
dx11/: CMakeLists.txt  compile_shader.cpp  debug_renderer.cpp  default_samplers.cpp  deferred_renderer.cpp  dx11_api_context.cpp  dx11_deferred_module.cpp  dx11_forward_module.cpp  dx11_gui_renderer.cpp  dx11_render_module.cpp  dxgi_formats.cpp  export_modules.cpp  forward_renderer.cpp  gpu_mesh.cpp  gpu_profiler.cpp  render_resource.cpp  render_resource_manager.cpp  shader_program.cpp  texture.cpp  uber_shader.cpp  vertex_buffers_factory.cpp  visual_debugger.cpp
dx11/include/xng/: dx11.hpp
dx11/include/xng/dx11/: compile_shader.hpp  constant_buffer.hpp  debug_renderer.hpp  default_samplers.hpp  deferred_renderer.hpp  dx11_api_context.hpp  dx11_deferred_module.hpp  dx11_forward_module.hpp  dx11_gui_renderer.hpp  dx11_headers.hpp  dx11_render_module.hpp  dxgi_formats.hpp  forward_renderer.hpp  gpu_mesh.hpp  gpu_mesh_manager.hpp  gpu_profiler.hpp  render_resource.hpp  render_resource_manager.hpp  shader_program.hpp  texture.hpp  uber_shader.hpp  vertex_buffers_factory.hpp  visual_debugger.hpp
dx11/shaders/dx11/: debug.xhlsl  deferred.xhlsl  deferred_shading.xhlsl  forward.xhlsl  gui.xhlsl  lights.xhlsl  normals.xhlsl  samplers.xhlsl  test.xhlsl  text.xhlsl
dx11/shaders/dx11/deferred/: gbuffer.xhlsl
dx11/shaders/dx11/shadows/: shadow_mapping.xhlsl
dx11/shaders/dx11/utils/: lights.xhlsl  quad_input.xhlsl  text.xhlsl
dx11/shadows/: shadow_map_renderer.cpp  shadow_mapping.cpp
editor/: CMakeLists.txt  app.cpp  camera_page.cpp  camera_page.hpp  editor.cpp  editor.hpp  editor_module.cpp  editor_module.hpp  export_modules.cpp  fps_camera_controller.cpp  fps_camera_controller.hpp  frame.cpp  frame.hpp  globals.cpp  globals.hpp  light_page.cpp  light_page.hpp  render_panel.cpp  render_panel.hpp  rendering_settings_page.cpp  rendering_settings_page.hpp  scene_graph_page.cpp  scene_graph_page.hpp  wx.hpp  wx_helpers.hpp
engine/: CMakeLists.txt  game.cpp  module.cpp  module_factory.cpp  module_manager.cpp
engine/include/xng/: engine.hpp
engine/include/xng/engine/: game.hpp  module.hpp  module_factory.hpp  module_manager.hpp  render_module.hpp  runtime_module.hpp  scene_module.hpp
fontbaker/: CMakeLists.txt
gl/: CMakeLists.txt  counting_fence.cpp  export_modules.cpp  forward_renderer.cpp  gl_api_context.cpp  gl_render_module.cpp  gpu_mesh.cpp  ring_buffer.cpp  shader.cpp  shader_program.cpp  uber_shader.cpp  vao_manager.cpp  vertex_buffers_factory.cpp  wgl_api_context.cpp
gl/include/xng/: gl.hpp
gl/include/xng/gl/: attributes.hpp  counting_fence.hpp  errors.hpp  forward_renderer.hpp  gl_api_context.hpp  gl_headers.hpp  gl_render_module.hpp  gpu_mesh.hpp  gpu_mesh_manager.hpp  ring_buffer.hpp  shader.hpp  shader_program.hpp  uber_shader.hpp  vao_manager.hpp  vertex_buffers_factory.hpp  wgl_api_context.hpp
gl/shaders/gl/: test.xglsl  test_shader.frag  test_shader.vert
graphics/: CMakeLists.txt  acceleration_library.cpp  assimp_load.cpp  assimp_loader.cpp  camera.cpp  charsets.py  font.cpp  freetype_font_loader.cpp  glyph_map.cpp  image.cpp  material.cpp  mesh.cpp  realtime_window_observer.cpp  renderer_configuration.cpp  scene.cpp  scene_graph.cpp  scene_graph_camera.cpp  scene_graph_geometry.cpp  scene_graph_group.cpp  scene_graph_light.cpp  scene_graph_node.cpp  shader_preprocessor.cpp  signed_distance_field.cpp  uber_shader_preprocessor.cpp
graphics/include/xng/: graphics.hpp
graphics/include/xng/graphics/: acceleration_library.hpp  api_context.hpp  api_version.hpp  assimp_load.hpp  assimp_loader.hpp  camera.hpp  font.hpp  freetype_font_loader.hpp  freetype_initializer.hpp  glyph_map.hpp  image.hpp  make_text.hpp  material.hpp  mesh.hpp  mesh_manager.hpp  realtime_window_observer.hpp  render_resource.hpp  renderer.hpp  renderer_configuration.hpp  scene.hpp  scene_graph.hpp  scene_graph_camera.hpp  scene_graph_geometry.hpp  scene_graph_group.hpp  scene_graph_light.hpp  scene_graph_node.hpp  shader_preprocessor.hpp  shader_types.hpp  uber_shader_preprocessor.hpp
input/: CMakeLists.txt  input_handler.cpp  input_queue.cpp  keyboard.cpp  mouse.cpp
input/include/xng/: input.hpp
input/include/xng/input/: input_handler.hpp  input_queue.hpp  keyboard.hpp  mouse.hpp  vkeys.hpp
launcher/: CMakeLists.txt  launcher.cpp
math/: CMakeLists.txt
math/geometry/: aabb.cpp  affine_transforms.cpp  debug.cpp  frustum.cpp  obb.cpp  plane.cpp  view_projection.cpp
math/include/xng/: geometry.hpp  math.hpp
math/include/xng/geometry/: aabb.hpp  affine_transforms.hpp  bounding_volumes.hpp  cramer.hpp  debug.hpp  forward.hpp  frustum.hpp  intersection.hpp  intersection.inl  leading_zeros.hpp  loose_octree.hpp  loose_octree.inl  morton.hpp  obb.hpp  plane.hpp  ray.hpp  sphere.hpp  transform_affine.hpp  transform_hierarchy.hpp  transform_hierarchy.inl  view_projection.hpp
math/include/xng/math/: constants.hpp  convertions.hpp  cwise_operator.hpp  forward.hpp  math_fwd.hpp  math_type_traits.hpp  matrix.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix3x3_impl.inl  matrix4x4.hpp  matrix4x4_impl.inl  matrix_base_impl.inl  matrix_functions.hpp  matrix_iterators.hpp  matrix_operators.hpp  matrix_traits.hpp  newton_raphson.hpp  quaternion.hpp  (+13 more)
os/: CMakeLists.txt
os/include/xng/: os.hpp
res/: CMakeLists.txt  resource.cpp  resource_factory.cpp  resource_manager.cpp
res/include/xng/: res.hpp
resource_test/: CMakeLists.txt  resource_test.cpp
scene/: CMakeLists.txt  basic_scene.cpp  basic_scene_module.cpp  export_modules.cpp
vk/module/: CMakeLists.txt
vk/tests/: CMakeLists.txt  export_modules.cpp  tests_window.cpp  tests_window.hpp  vktests_module.cpp  vktests_module.hpp
win32/: CMakeLists.txt  directory_iterator.cpp  errors.cpp  filesystem.cpp  main_loop.cpp  message_box.cpp  native_window.cpp  native_window_observer.cpp  native_window_wndproc.cpp  path.cpp  raw_input.cpp  shared_library.cpp  timestamp.cpp  window_observer.cpp
win32/include/xng/: os.hpp  win32.hpp
(+111 files in other folders)
